k3s/databases/mongodb/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: databases
spec:
  serviceName: mongodb-headless
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      priorityClassName: homelab-infra
      terminationGracePeriodSeconds: 60

      containers:
        - name: mongodb
          image: mongo:9.0

          command:
            - mongod
            - --config
            - /etc/mongo/mongod.conf

          ports:
            - containerPort: 27017

          lifecycle:
            postStart:
              exec:
                command:
                  - bash
                  - -c
                  - |
                    [...]
          volumeMounts:
            - name: data
              mountPath: /data/db

            - name: config
              mountPath: /etc/mongo/mongod.conf
              subPath: mongod.conf

            - name: keyfile
              mountPath: /etc/mongo/keyfile
              subPath: keyfile

            - name: tls
              mountPath: /etc/mongo/tls
              readOnly: true

      volumes:
        - name: config
          configMap:
            name: mongodb-config

        - name: keyfile-src
          secret:
            secretName: mongodb-secret
            items:
              - key: MONGO_REPLICA_SET_KEY_FILE
                path: keyfile

        - name: keyfile
          emptyDir: {}

        - name: tls-src
          secret:
            secretName: mongodb-server-tls

        - name: tls
          emptyDir: {}

  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: mongodb
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ""
        resources:
          requests:
            storage: 20Gi
