k3s/databases/mongodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: databases
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
